# trade-signals

./: .gitignore  Makefile  README.md  REVISION  index.html  pyproject.toml  tickers.json
.github/workflows/: jekyll-gh-pages.yml
docs/: index.html  test.html
src/: log.py  main.py  render_html.py
