[project]
name = "trade-analyses"
version = "0.1.0"
description = "Trading analysis app with MACD & APNs push"
authors = [
    {name = "Haa, Danny", email = "danny@bla.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.28",
    "aioapns>=3.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "httpx (>=0.28.1,<0.29.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "yfinance (>=0.2.66,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false